--- a/basics/templates/basics/actofgoods_startpage.html
+++ b/basics/templates/basics/actofgoods_startpage.html
@@ -101,10 +101,10 @@
 						{% endif %}
 
 		  				<div class="form-group">
-		  					<input type="password" class="form-control input-lg" placeholder="Password" name="password" required/>
+		  					<input type="password" class="form-control input-lg" placeholder="Password" pattern=".{6,}" name="password" required title="Minimum 6 characters required"/>
 		  				</div>
 		          		<div class="form-group">
-		  					<input type="password" class="form-control input-lg" placeholder="Password" name="check_password" required/>
+		  					<input type="password" class="form-control input-lg" placeholder="Password" pattern=".{6,}" name="check_password" required title="Minimum 6 characters required"/>
 		  				</div>
 							{% if messages %}
 	    						{% for message in messages %}
