--- a/basics/templates/basics/group_edit.html
+++ b/basics/templates/basics/group_edit.html
@@ -53,7 +53,7 @@
 					</div>
                     <div class="row">
                         <div class="col-lg-7 col-md-8 col-sm-12">
-                            <h4>Choose/or change the location of the head quarter of your organisation: <a id="tooltip-info" data-toggle="tooltip" data-placement="bottom"  title="This location of your organisation is visible for all user of Act of Goods in your organisation profile."><span class="glyphicon glyphicon-question-sign" style="color: #5D5F5B;"></span></a></h4>
+                            <h4>Choose/or change the location of the head office of your organisation: <a id="tooltip-info" data-toggle="tooltip" data-placement="bottom"  title="This location of the head office from your organisation is visible for all user of Act of Goods in your organisation profile."><span class="glyphicon glyphicon-question-sign" style="color: #5D5F5B;"></span></a></h4>
                         </div>
                         <div class="col-lg-3 col-md-3 col-sm-4">
                             <div class="form-group">
