--- a/basics/templates/basics/profil_edit.html
+++ b/basics/templates/basics/profil_edit.html
@@ -1,93 +1,129 @@
 {% extends 'basics/base.html' %}
-
 {% block content %}
-<!-- Introduction Row -->
+
 	<div id="standard-modal">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h1 class="text-center">Edit Your Profile</h1>
+                <h2 class="text-center" id="standard-modal-headline">Edit your Profile<br><small>Use this form to add or change all important data of your profile.</small></h2>
 			</div>
 			<div class="modal-body">
 				<form class="form" role="form" method="post" accept-charset="UTF-8">
 				    {% csrf_token %}
-    				<div class="form-group">
-    					<p style="font-size:130%;"> Pseudonym </p>
-						<input type="description" class="form-control input-lg" value= {{ userdata.pseudonym }} name="pseudo" maxlength="15" >
-					</div>
 
 					<div class="form-group">
-						<p style="font-size:130%;"> E-Mail </p>
+                        <h4>Change your email address: <a id="tooltip-info" data-toggle="tooltip" data-placement="bottom"  title="This email address is only visible for you unless you are member of an organisation. All member of your organisations can see your email address."><span class="glyphicon glyphicon-question-sign" style="color: #5D5F5B;"></span></a></h4>
 						<input type="description" class="form-control input-lg" value= {{ user.email }} name="email" maxlength="255" >
 					</div>
 
+                    <div class="form-group">
+
+                        <h4><span><input type = "checkbox" name="changePassword" {% if change == True %} checked {% endif %} onclick=$("#passwordChange").fadeToggle();></span> Change your password</h4>
+
+    					<div id="passwordChange" {% if change == False %}style="display:none " {% endif %}>
+
+                            <div class="row">
+                                <div class="col-sm-10 col-sm-offset-1">
+                					{% if change == True %}
+                					    <p> couldn't change password, please try again </p>
+                					{% endif %}
+                    				<div class="form-group">
+                					    <input type="password" class="form-control input-lg" placeholder= "Old Password"  name="oldpw" >
+                					</div>
+
+                					<div class="form-group">
+                					    <input type="password" class="form-control input-lg" placeholder= "New Password"  name="newpw1" >
+                					</div>
+
+                					<div class="form-group">
+                					    <input type="password" class="form-control input-lg" placeholder= "Repeat new Password"  name="newpw2" >
+                					</div>
+                                </div>
+                            </div>
+
+    					</div>
+                    </div>
+
 					<div class="form-group">
-						<p style="font-size:130%;"> Phone </p>
 						{% if userdata.phone == "" %}
-							<input type="description" class="form-control input-lg" placeholder= phonenumber name="phone" maxlength="13" >
+                            <h4>Add a phone number: <a id="tooltip-info" data-toggle="tooltip" data-placement="bottom"  title="This phone number is only visible for you. If you add a phone number you can send your phone number in a chat with by one click."><span class="glyphicon glyphicon-question-sign" style="color: #5D5F5B;"></span></a></h4>
+                            <input type="description" class="form-control input-lg" placeholder="Phone Number" name="phone" maxlength="13" >
 						{% else %}
+                            <h4>Change your phone number: <a id="tooltip-info" data-toggle="tooltip" data-placement="bottom"  title="This phone number is only visible for you. In a chat with an other user you can send your phone number by one click."><span class="glyphicon glyphicon-question-sign" style="color: #5D5F5B;"></span></a></h4>
 							<input type="description" class="form-control input-lg" value= {{ userdata.phone }} name="phone"  >
 						{% endif %}
 					</div>
 
-					<div class="form-group">
-						<p style="font-size:130%;"> Range in km </p>
-						<input type="description" class="form-control input-lg" value= {{ userdata.aux }} name="aux" maxlength="5" >
-					</div>
+                    <div class="form-group">
+                        <div class="row">
+                            <div class="col-lg-4 col-md-4 col-sm-6">
+                                <h4>Change your auxiliary radius: <a id="tooltip-info" data-toggle="tooltip" data-placement="bottom"  title="The auxiliary radius is your default radius where you get needs and information from other users."><span class="glyphicon glyphicon-question-sign" style="color: #5D5F5B;"></span></a></h4>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-4">
+                                <div class="input-group">
+                                    <input type="description" class="form-control input-lg" value= {{ userdata.aux }} name="aux" maxlength="5" >
+                                    <span class="input-group-addon">km</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
-					<div class="form-group">
-					</div>
-					{% include "basics/map_testing.html" %}
+                    <div class="row">
+                        <div class="col-lg-4 col-md-4 col-sm-6">
+                            <h4>Change your standard location: <a id="tooltip-info" data-toggle="tooltip" data-placement="bottom" title="This location is only visible for you. We need your roughly location to show you needs and information in your neighborhood."><span class="glyphicon glyphicon-question-sign" style="color: #5D5F5B;"></span></a></h4>
+                        </div>
+                        <div class="col-lg-3 col-md-3 col-sm-4">
+                            <div class="form-group">
+                                {% include "basics/map_testing.html" %}
+                            </div>
+                        </div>
+                    </div>
 
-					<p><input type = "checkbox" name="information" {% if userdata.get_notifications %} checked {% endif %} onclick=$("#categories").fadeToggle();>
-						<label class="w3-validate"> Inform me via email </label></p>
+                    <div class="form-group">
 
-					<div id="categories" {% if not userdata.get_notifications %} style="display: none" {% endif %}>
+                        <h4><span><input type = "checkbox" name="information" {% if userdata.get_notifications %} checked {% endif %} onclick=$("#categories").fadeToggle();></span> Inform me via email <a id="tooltip-info" data-toggle="tooltip" data-placement="bottom"  title="If you check this box you will get information in your neighborhood. Additionaly you can choose categories where you want to be informed if somebody in your auxiliary radius needs help in one of your choosen categories."><span class="glyphicon glyphicon-question-sign" style="color: #5D5F5B;"></span></a></h4>
 
-					<p> Categories I want to be informed about </p>
-						<div style="height: 6em; width: 12em; overflow: auto; padding-left:20px;">
-							{% for categorie in categories %}
-						 		<input id="{{categorie.id}}" type="checkbox" name=categories[] value = "{{categorie.name}}" {% if categorie in selected %} checked {% endif %} />
- 								<label for="{{categorie.id}}">{{categorie.name}}</label>
-								<br>
-							{% endfor %}
- 						</div>
-						<br><br>
-					</div>
+    					<div id="categories" {% if not userdata.get_notifications %} style="display: none" {% endif %}>
 
-					<p><input type = "checkbox" name="changePassword" {% if change == True %} checked {% endif %} onclick=$("#passwordChange").fadeToggle();>
-						<label>Change my Password</label></p>
+                            <div class="row">
+                                <div class="col-sm-10 col-sm-offset-1">
+                                    <p> Categories I want to be informed about </p>
+                                </div>
+                                <div class="col-sm-10 col-sm-offset-1" style="height: 10em; overflow: auto;">
+                                    {% for categorie in categories %}
+        						 		<p><span><input id="{{categorie.id}}" type="checkbox" name=categories[] value = "{{categorie.name}}" {% if categorie in selected %} checked {% endif %} /></span> {{categorie.name}}</p>
+        							{% endfor %}
+                                </div>
+                            </div>
+    					</div>
 
+                    </div>
 
-					<div id="passwordChange" {% if change == False %}style="display:none " {% endif %}>
+                    <div class="row">
+                        <div class="col-lg-4 col-lg-offset-8 col-md-4 col-md-offset-8 col-sm-6 col-sm-offset-6">
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <div class="form-group">
+                                        <a id="standard-grey-button-bold" class="btn btn-default btn-lg btn-block" type="button" href="{% url 'basics:profil' %}"><span class="glyphicon glyphicon-chevron-left"></span> Back</a>
+                                    </div>
+                                </div>
+                                <div class="col-sm-6">
+                                    <div class="form-group">
+                						<input id="standard-grey-button-bold" type="submit" onclick="profil_edit" class="btn btn-block btn-lg btn-primary" value="Save"/>
+                					</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
-					{% if change == True %}
-					<p> couldn't change password, please try again </p>
-					{% endif %}
-    					<div class="form-group">
-					<input type="password" class="form-control input-lg" placeholder= "old password"  name="oldpw" >
-					</div>
-
-					<div class="form-group">
-					<input type="password" class="form-control input-lg" placeholder= "new password"  name="newpw1" >
-					</div>
-
-					<div class="form-group">
-					<input type="password" class="form-control input-lg" placeholder= "repeat"  name="newpw2" >
-					</div>
-
-						</div>
-
-					<br>
-
-
-					<div class="form-group">
-						<input id="standard-grey-button-bold" type="submit" onclick="profil_edit" class="btn btn-block btn-lg btn-primary" value="Save"/>
-					</div>
 				</form>
 			</div>
 		</div>
 	</div>
 
+<script>
+$(document).ready(function(){
+    $('[data-toggle="tooltip"]').tooltip();
+});
+</script>
+
 {% endblock %}
-
-
