--- a/basics/templates/snippets/claim_needs.html
+++ b/basics/templates/snippets/claim_needs.html
@@ -25,7 +25,7 @@
                                                     <span class="glyphicon glyphicon-comment"></span> Help
                                                 </div>
                                             </a>
-                                             <a class="list-group-footer-button" type="button" style="cursor:pointer" id="report{{need.pk}}"" onclick="report({{need.pk}})"">
+                                             <a class="list-group-footer-button" type="button" style="cursor:pointer" id="reportNeed{{need.pk}}"" onclick="reportNeed({{need.pk}})"">
                                                 <div class="col-sm-6">
                                                      <span class="glyphicon glyphicon-ban-circle"></span> Report
                                                 </div>
@@ -62,7 +62,7 @@
                                           <div class="modal-footer">
                                               <button type="button" id="standard-grey-button-bold" class="btn btn-default btn-sml standard-grey-button-light " onclick="location.href='{% url 'basics:needs_help' id=need.id %}';" style="margin-bottom: 10px;"><span class="glyphicon glyphicon-comment"></span> Help</button>
                                               {% if not user.userdata in need.reported_by.all %}
-                                                <button  type="button" id="standard-grey-button-bold" data-dismiss="modal" class="btn btn-default btn-sml standard-grey-button-light " onclick="report({{need.pk}})"" style="margin-bottom: 10px;"><span class="glyphicon glyphicon-ban-circle"></span>Report</button>
+                                                <button  type="button" id="standard-grey-button-bold" data-dismiss="modal" class="btn btn-default btn-sml standard-grey-button-light " onclick="reportNeed({{need.pk}})"" style="margin-bottom: 10px;"><span class="glyphicon glyphicon-ban-circle"></span>Report</button>
                                               {% endif %}
                                               <button id="standard-grey-button-bold" type="button" class="btn btn-primary" data-dismiss="modal" style="margin-bottom: 10px;">Close</button>
                                           </div>
