--- a/basics/templates/basics/home.html
+++ b/basics/templates/basics/home.html
@@ -238,7 +238,7 @@
                             </select>
                         </div>
                         <div  class="col-sm-2" style="margin-top: -5px; margin-bottom: 10px;">
-                            <input id="standard-grey-button-bold" onclick="filter()" class="btn btn-block btn-lg btn-primary" value="Filter"/>
+                            <input id="standard-grey-button-bold" type="button" onclick="filter()" class="btn btn-block btn-lg btn-primary" value="Filter"/>
                         </div>
                     <div class="col-sm-1"></div>
                 {% else %}
