--- a/basics/templates/basics/map_claim.html
+++ b/basics/templates/basics/map_claim.html
@@ -688,19 +688,30 @@
         }poly.setMap(map);
     }
 
-	function getLocation() {
-    	if (navigator.geolocation) {
-    	    navigator.geolocation.getCurrentPosition(showPosition);
-    	} else {
-    	    x.innerHTML = "Geolocation is not supported";
-    	    y.innerHTML = "by this browser.";
-    	}
-	}
+    function getLocation() {
+        if (navigator.geolocation) {
+            navigator.geolocation.getCurrentPosition(function(position) {
+              var pos = {
+                lat: position.coords.latitude,
+                lng: position.coords.longitude
+              };
+              placeMarker(pos);
+            }, 
+            function() {
+              handleLocationError(true, infoWindow, map.getCenter());
+            });
+        } else {
+            // Browser doesn't support Geolocation
+            handleLocationError(false, infoWindow, map.getCenter());
+          }
+    }
 
-	function showPosition(position) {
-    	var latlng={lat: parseFloat(position.coords.latitude), lng: parseFloat(position.coords.longitude)};
-    	placeMarker(latlng);
-	}
+    function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+      infoWindow.setPosition(pos);
+      infoWindow.setContent(browserHasGeolocation ?
+                            'Error: The Geolocation service failed.' :
+                            'Error: Your browser doesn\'t support geolocation.');
+    }
 
 
 	function placeMarker(location) {
