redesign need edit and no chat

--- a/basics/templates/basics/no_chat.html
+++ b/basics/templates/basics/no_chat.html
@@ -5,7 +5,16 @@
 {% load staticfiles %}
 
   <body>
-    <p> No Chat for you Sir </p>
+      <div id="standard-modal">
+      	<div class="modal-content">
+      		<div class="modal-header">
+  				<h2 class="text-center" id="standard-modal-headline">Chats<br><small>You have no chats with other users.</small></h2>
+      		</div>
+      		<div class="modal-body">
+                <h4>You have no chats with other users.</h4>
+      		</div>
+      	</div>
+      </div>
   </body>
   <div id="pop_up">
 
