--- a/basics/templates/basics/map_claim.html
+++ b/basics/templates/basics/map_claim.html
@@ -284,7 +284,7 @@
 
               url: "needs/",
               type: "POST",
-              data: {csrfmiddlewaretoken: '{{ csrf_token }}', category: $("#category").val(), wordsearch: $("#need-wordsearch").val(), liste: liste},
+              data: {csrfmiddlewaretoken: '{{ csrf_token }}', group:'{{group}}', category: $("#category").val(), wordsearch: $("#need-wordsearch").val(), liste: liste},
 
               beforeSend: function() {
                 $('#need-list').html("<div class='modal-body' style='padding-bottom: 0px;'' id='loader'><center><img src='{% static 'basics/images/loader.gif' %}'/></center></div><br>");
@@ -485,7 +485,7 @@
         		});
             }else{$.notify("Please choose at least 3 points for your claim.",{className: "info", position: "right-bottom"})}
         }else{$("#claimname").notify("Please choose a title for your Claim.",{className: "error", position: "top-right"})}
-    
+
     } else{
         $.notify("You already saved your Area! Press New to create another.",{className: "info", position: "right-bottom"});
     }
