--- a/basics/templates/basics/contact_us.html
+++ b/basics/templates/basics/contact_us.html
@@ -9,7 +9,6 @@
 		<div class="modal-body">
 			<form class="form" role="form" method="post" accept-charset="UTF-8">
 			{%csrf_token%}
-                <h4>Enter email address to get an answer:</h4>
                 {% if messages %}
 		            {% for message in messages %}
 		                {% if message.message == 'wrong_email' %}
@@ -29,9 +28,9 @@
 		            {% endfor %}
 		        {% endif %}
 				<div class="form-group">
+                    <h4>Enter your email address: <a id="tooltip-info" data-toggle="tooltip" data-placement="bottom"  title="This email address is only for us visible to answer your question."><span class="glyphicon glyphicon-question-sign" style="color: #5D5F5B;"></span></a></h4>
   					<input type="email" class="form-control input-lg" placeholder="Email" name="email" maxlength="255" required/>
   				</div>
-                <h4>Enter a headline:</h4>
                 {% if messages %}
 		            {% for message in messages %}
 		                {% if message.message == 'no_headline' %}
@@ -42,9 +41,9 @@
 		            {% endfor %}
 		        {% endif %}
 				<div class="form-group">
-					<input type="description" class="form-control input-lg" placeholder="Headline" name="headline" maxlength="30" required></input>
+                    <h4>Enter a headline: <a id="tooltip-info" data-toggle="tooltip" data-placement="bottom"  title="Give a clearly short overview of your question or request."><span class="glyphicon glyphicon-question-sign" style="color: #5D5F5B;"></span></a></h4>
+                    <input type="description" class="form-control input-lg" placeholder="Headline" name="headline" maxlength="30" required></input>
 				</div>
-                <h4>Write a description:</h4>
                 {% if messages %}
 		            {% for message in messages %}
 		                {% if message.message == 'no_description' %}
@@ -55,6 +54,7 @@
 		            {% endfor %}
 		        {% endif %}
 				<div class="form-group">
+                    <h4>Write a description:</h4>
 					<textarea type="description" class="form-control input-lg" placeholder="Description" name="text" rows="4" required></textarea>
 				</div>
 				<div class="form-group">
@@ -68,5 +68,11 @@
 		</div>
 	</div>
 </div>
+
+<script>
+$(document).ready(function(){
+    $('[data-toggle="tooltip"]').tooltip();
+});
+</script>
 
 {% endblock %}
