--- a/basics/templates/basics/immediate_aid.html
+++ b/basics/templates/basics/immediate_aid.html
@@ -9,29 +9,31 @@
         <div class="modal-body">
             <form class="form" role="form" method="post" accept-charset="UTF-8">
             {%csrf_token%}
-                <h4>Enter an email address so we can create an account for you. Notice that nobody will see your email address:</h4>
                 <div class="form-group">
+                    <h4>Enter an email address: <a id="tooltip-info" data-toggle="tooltip" data-placement="bottom"  title="We need your email address to create an account for you and send you your password. Notice that nobody will see your email address.  "><span class="glyphicon glyphicon-question-sign" style="color: #5D5F5B;"></span></a></h4>
                     <input type="Email" class="form-control input-lg" placeholder="Email" name="email"  rows="4" value="{{form.email.value}}" maxlength="255"></textarea>
                 </div>
-                <h4>Enter a headline for your need:</h4>
+                <h4>Enter a headline for your need: <a id="tooltip-info" data-toggle="tooltip" data-placement="bottom"  title="This headline will represent your need for other user. Give a clearly short overview."><span class="glyphicon glyphicon-question-sign" style="color: #5D5F5B;"></span></a></h4>
                 <div class="form-group">
                     <input type="description" class="form-control input-lg" placeholder="Headline" name="headline"  rows="4" value="{{need_form.headline.value}}" maxlength="30"></textarea>
                 </div>
-                <h4>Choose a category for your need:</h4>
+                <h4>Choose a category for your need: <a id="tooltip-info" data-toggle="tooltip" data-placement="bottom"  title="Choose a suitable category for your need so that other user can find your need easily."><span class="glyphicon glyphicon-question-sign" style="color: #5D5F5B;"></span></a></h4>
                 <select style="width: 100%" name="{{need.categorie.name}}">
                     {% for categorie in categories%}
                         <option value="{{categorie.id}}">{{categorie.name}}</option>
                     {% endfor %}
                 </select>
-                <h4>Write a description of your need:</h4>
+                <h4>Write a description of your need: <a id="tooltip-info" data-toggle="tooltip" data-placement="bottom"  title="Give an accurate description of your need so that other user can realize your problem."><span class="glyphicon glyphicon-question-sign" style="color: #5D5F5B;"></span></a></h4>
                 <div class="form-group">
                     <textarea type="description" class="form-control input-lg" placeholder="Description" name="text"  rows="4" value="{{need_form.text.value}}">{{need_form.text.value}}</textarea>
                 </div>
-                <h4>Finally we need your location to let people in your neighborhood know that you need help. Later you can change this location in your profile.</h4>
                 <div class="row">
-                    <div class="col-sm-4 col-sm-offset-4">
+                    <div class="col-lg-4 col-md-5 col-sm-7">
+                        <h4>Choose a location where you need help: <a id="tooltip-info" data-toggle="tooltip" data-placement="bottom"  title="We need a location to let people in your neighborhood know that you need help. Later you can change this location in your profile."><span class="glyphicon glyphicon-question-sign" style="color: #5D5F5B;"></span></a></h4>
+                    </div>
+                    <div class="col-lg-3 col-md-3 col-sm-4">
                         <div class="form-group">
-                            {% include "basics/map_testing.html" %}</p>
+                            {% include "basics/map_testing.html" %}
                         </div>
                     </div>
                 </div>
@@ -53,6 +55,12 @@
   function register(){
     $("#register_form").submit();
   }
+</script>
+
+<script>
+$(document).ready(function(){
+    $('[data-toggle="tooltip"]').tooltip();
+});
 </script>
 
 {% endblock %}
