verification random id

--- a/basics/templates/basics/profil.html
+++ b/basics/templates/basics/profil.html
@@ -54,10 +54,10 @@
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                    <h4 class="modal-title">Delete Your Profile</h4>
+                                    <h4 class="modal-title">Delete Your Account</h4>
                                  </div>
                                 <div class="modal-body">
-                                    <p>If you delete your profile, your data will be permanently lost.</p>
+                                    <p>If you delete your account, your data will be permanently lost.</p>
                                     <p>Would you like to rethink your decision?</p>
                                 </div>
                                  <div class="modal-footer">
