--- a/basics/templates/basics/verification.html
+++ b/basics/templates/basics/verification.html
@@ -41,7 +41,7 @@
                         <div class="row">
                             <div class="col-sm-3 col-sm-offset-9">
                                 <div class="form-group">
-                                    <input id="standard-grey-button-bold" type="submit" onclick="verifcation(pk)" class="btn btn-block btn-lg btn-primary" value="Verify"/>
+                                    <input id="standard-grey-button-bold" type="submit" onclick="verifcation(id)" class="btn btn-block btn-lg btn-primary" value="Verify"/>
         						</div>
                             </div>
                         </div>
