--- a/administration/templates/administration/base_admin.html
+++ b/administration/templates/administration/base_admin.html
@@ -77,7 +77,9 @@
 						    </ul>
                         </div>
 						<ul class="nav navbar-nav navbar-right">
+							{% if not user.is_superuser %}
 							<li id="navbar-with-divider" {% if "/home/" in request.path %} class="active" {% endif %}><a href="{% url 'basics:home' %}">User Area</a></li>
+							{% endif %}
                             <li {% if "/faq_administration/" in request.path %} class="active" {% endif %}><a href="{% url 'administration:faq_administration'%}">FAQ</a></li>
                             <li><a href="{% url 'basics:logout' %}">Logout</a></li>
 						</ul>
