--- a/basics/templates/basics/map_claim.html
+++ b/basics/templates/basics/map_claim.html
@@ -148,6 +148,10 @@
                         <div id="map-container" style="border: 1px solid #ddd;"></div>
                     </div>
 
+
+                    <div class="col-sm-12" style="height: 40px ;text-align: right; border: 1px solid #ddd; margin-top: 4px;">
+                    	<h5>Check your boxes and get your needs and informationen in those claims!</h5>
+                    </div>
                     <div class="col-sm-12">
                         <div class="col-sm-12" id="outer-claim-scroll">
                             <div style="max-height: 410px; overflow-y: scroll;">
